style.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.navbar, .navbar-left, .navbar-right {
  display: flex;
  align-items: center;
}

.navbar {
  background-color: #CDA34F;
  justify-content: space-between;
  top: 0%;
  width: 100%;
  margin: 0;
  padding-bottom: 75px;
}

.navbar-left, .navbar-right {
  margin: 0 100px 0 100px;
}

.nav-link {
  font-size: 18px;
  color: #373F27;
}

ul {
  display: flex;
  flex-direction: row;
  list-style-type: none;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

li {
  margin: 10px;
  padding: 0;
}

.logo {
  width: 50px;
  filter:drop-shadow(30%);
  padding: 5px;
}

a {
  text-decoration: none;
}

a:hover {
  color: #E9E7DA;
}

.hero, .hero-left, .hero-right {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
}

.hero {
  flex-direction: row;
  margin: 0;
  padding-bottom: 100px;
  background-color: #CDA34F;
  gap: 150px;
}

.hero-left {
  flex-direction: column;
  margin-left: 100px;
  justify-content: center;
}

.hero-right {
  margin-right: 100px;
  align-items: center;
  justify-content: center;
}

.hero-head {
  font-size: 48px;
  font-weight: bolder;
  color: #E9E7DA;
}

.hero-text {
  font-size: 18px;
  color: #373F27;
}

.hero-button {
  background-color: #636B46;
  border: none;
  color: #E9E7DA;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
}

.hero-button:hover {
  background-color: #E9E7DA;
  color: #636B46;
}

.products-container, .products {
  display: flex;
  align-items: center;
}

.products-container {
  flex-direction: column;
  background-color: #E9E7DA;
  padding: 50px 0 100px 0;
  justify-content: center;
  margin: 0;
}

.products-title {
  color: #CDA34F;
}

.products {
  width:fit-content;
  padding: 25px 100px;
  justify-content: space-between;
  flex-shrink: 0;
  margin: 0;
  gap: 50px;
}

.mushroomtext {
  text-align: center;
  padding: 10px;
  color: #373F27;
}

.mushroom img {
  width: 150px;
  height: 150px;
  border-radius: 10px;
  padding: 3px;
  background-color: #636B46 ;
}

.mushroom img:hover{
  filter: opacity(50%);
}

.quote-container {
  display: flex;
  flex-direction: column;
  background-color: #373F27;
  align-content: center;
  padding: 100px 400px;
}

.quote {
  display: flex;
  flex-direction: row;
  color: #E9E7DA;
  font-size: 36px;
  font-weight: lighter;
}

.author {
  display: flex;
  justify-content: flex-end;
  color: #CDA34F;
  font-size: 18px;
}

